--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#about">Sobre mí</a>
+              <a class="nav-link" href="#sobre-mi">Sobre mí</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#about">Experiencia</a>
+              <a class="nav-link" href="#mi-experiencia">Experiencia</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#work">Trabajos</a>
+              <a class="nav-link" href="#mis-trabajos">Trabajos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contact">Contacto</a>
+              <a class="nav-link" href="#contacto">Contacto</a>
             </li>
           </ul>
         </div>
@@ -49,13 +49,13 @@
 
 
     <header>
-      <div class="hero text-white text-center pt-5 mt-5">
-        <h2 class="display-4 text-bottom">Yo soy </h2>
-        <h2 class="display-4 font-weight-bold  text-bottom firma-n">Fabián</h2>
+      <div class="hero text-dark text-center ml-4 pt-5">
+        <h2 class="display-5 text-bottom">Yo soy </h2>
+        <h2 class="display-5 font-weight-bold  text-bottom firma-n">Fabián</h2>
       </div>
     </header>
 
-    <section>
+    <section id="sobre-mi">
       <div class="container">
         <div class="mt-5">
          <h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h5>
@@ -72,7 +72,7 @@
 
     </section>
 
-    <section>
+    <section id="mi-experiencia">
       <div class="container text-center mt-5">
         <div class="">
           <h2>MI EXPERIENCIA</h2>
@@ -86,11 +86,11 @@
               <div class="carousel-item active">
                   <div class="row">
                     <div class="col-6">
-                      <img class="d-block w-100" src="assets/img/fondo.jpeg" alt="First slide">
+                      <img class="d-block w-100 img-carousel" src="assets/img/udp.png" alt="First slide">
                       <h5>Ayudante Universidad Diego Portales</h5>
                     </div>
                     <div class="col-6">
-                      <img class="d-block w-100" src="assets/img/fondo.jpeg" alt="First slide">
+                      <img class="d-block w-100 img-carousel" src="assets/img/enel.jpeg" alt="First slide">
                       <h5>Práctica Enel</h5>
                     </div>
                   </div>
@@ -98,11 +98,11 @@
               <div class="carousel-item">
                   <div class="row">
                     <div class="col-6">
-                      <img class="d-block w-100" src="assets/img/fondo.jpeg" alt="second slide">
+                      <img class="d-block w-100 img-carousel" src="assets/img/parquearauco.png" alt="second slide">
                       <h5>Práctica Parque Arauco</h5>
                     </div>
                     <div class="col-6">
-                      <img class="d-block w-100" src="assets/img/fondo.jpeg" alt="second slide">
+                      <img class="d-block w-100 img-carousel" src="assets/img/moovmedia.png" alt="second slide">
                       <h5>Moovmedia, Marketing Digital</h5>
                     </div>
                   </div>
@@ -112,8 +112,8 @@
         </div>
     </section>
 
-    <section class="">
-      <div class="container mt-5 bg-primary">
+    <section id="mis-trabajos">
+      <div class="container mt-5 pb-5 bg-primary">
         <div class="text-center p-4">
           <h2>Mis últimos trabajos</h2>
         </div>
@@ -167,14 +167,16 @@
     </section>
 
 
-    <section>
-      <div class="mt-5 text-center">
-        <h2>Contacto</h2>
-
-        <p>¿Quieres conocer más de mí?</p>
+    <section id="contacto">
+      <div class="container">
+        <div class="mt-5 text-center">
+          <h2>Contacto</h2>
+          <p>¿Quieres conocer más de mí?</p>
+        </div>
+        <div class="text-center">
+          <div class="typeform-widget" data-url="https://fabiantapia.typeform.com/to/EIfdv7" style="width: 100%; height: 75%;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"> powered by <a href="https://admin.typeform.com/signup?utm_campaign=EIfdv7&utm_source=typeform.com-13659584-Basic&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=ES" style="color: #999" target="_blank">Typeform</a> </div>
+        </div>
       </div>
-
-
     </section>
 
 
@@ -182,15 +184,17 @@
 
 
     <footer class="bg-primary">
-      <div class="mt-5 p-4">
-        <div class="">
-          <h3>Fabián</h3>
-        </div>
-        <div class="">
-          <a href="https://github.com/"><i class="fab fa-github-square"></i></a>
-          <a href="https://www.linkedin.com/"><i class="fab fa-linkedin"></i></a>
-          <a href="https://twitter.com/"><i class="fab fa-twitter-square"></i></a>
-          <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
+      <div class="mt-5 p-4 text-footer">
+        <div class="row">
+            <div class="col-6 text-center ">
+              <h3 class="firma-n">Fabián</h3>
+            </div>
+            <div class="col-6 text-center">
+              <a href="https://github.com/"><i class="fab fa-2x fa-github-square"></i></a>
+              <a href="https://www.linkedin.com/"><i class="fab fa-2x fa-linkedin"></i></a>
+              <a href="https://twitter.com/"><i class="fab fa-2x fa-twitter-square"></i></a>
+              <a href="https://www.facebook.com/"><i class="fab fa-2x fa-facebook"></i></a>
+            </div>
         </div>
       </div>
 
