--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </div>
     </header>
 
-    <section id="sobremi" class="text-Permanent text-center mt-5">
+    <section id="sobremi" class="text-Permanent text-center mt-5 pt-5">
       <div class="container">
         <div class="mt-5 text-Permanent text-center">
          <h3>Sobre mi</h3>
@@ -72,8 +72,8 @@
 
     </section>
 
-    <section id="experiencia">
-      <div class="container text-center mt-5">
+    <section id="experiencia" class="pt-5">
+      <div class="container text-center mt-5 ">
         <div class="">
           <h2>MI EXPERIENCIA</h2>
         </div>
@@ -112,7 +112,7 @@
         </div>
     </section>
 
-    <section id="trabajos">
+    <section id="trabajos" class="pt-5">
       <div class="container mt-5 pb-5 bg-primary">
         <div class="text-center p-4">
           <h2>Mis últimos trabajos</h2>
@@ -200,7 +200,7 @@
 
     </footer>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
