--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </header>
 
     <section id="sobremi" class="text-Permanent text-center mt-5 pt-5">
-      <div class="container">
+      <div class="container border-medium">
         <div class="mt-5 text-Permanent text-center">
          <h3>Sobre mi</h3>
         </div>
@@ -74,7 +74,7 @@
 
     <section id="experiencia" class="pt-5">
       <div class="container text-center mt-5 ">
-        <div class="">
+        <div class="text-Permanent">
           <h2>MI EXPERIENCIA</h2>
         </div>
         <div id="carouselricomida" class="carousel slide" data-ride="carousel">
@@ -85,25 +85,29 @@
           <div class="carousel-inner">
               <div class="carousel-item active">
                   <div class="row">
-                    <div class="col-6">
-                      <img class="d-block w-100 img-carousel" src="assets/img/udp.png" alt="First slide">
+                    <div class="col-6 ">
+                      <img class="d-block m-auto img-carousel" src="assets/img/udp.png" alt="First slide">
                       <h5>Ayudante Universidad Diego Portales</h5>
+                      <p>Cursos: Principios de Microeconomía, Teoría de Juegos, Organizacion y Empresa, Taller de Análisis de empresa</p>
                     </div>
                     <div class="col-6">
-                      <img class="d-block w-100 img-carousel" src="assets/img/enel.jpeg" alt="First slide">
+                      <img class="d-block m-auto py-5" src="assets/img/enel.jpeg" alt="First slide">
                       <h5>Práctica Enel</h5>
+                      <p>Encargado factura y reparto masivo</p>
                     </div>
                   </div>
               </div>
               <div class="carousel-item">
                   <div class="row">
-                    <div class="col-6">
-                      <img class="d-block w-100 img-carousel" src="assets/img/parquearauco.png" alt="second slide">
+                    <div class="col-6 text-center">
+                      <img class="d-block m-auto img-carousel" src="assets/img/parquearauco.png" alt="second slide">
                       <h5>Práctica Parque Arauco</h5>
+                      <p>Analista Tesorería Regional</p>
                     </div>
-                    <div class="col-6">
-                      <img class="d-block w-100 img-carousel" src="assets/img/moovmedia.png" alt="second slide">
+                    <div class="col-6 text-center">
+                      <img class="d-block m-auto img-carousel" src="assets/img/moovmedia.png" alt="second slide">
                       <h5>Moovmedia, Marketing Digital</h5>
+                      <p>Encargado de contenido web de las empresas como Arauco, Fundacion Arauco, Santillana, etc.</p>
                     </div>
                   </div>
               </div>
@@ -114,28 +118,28 @@
 
     <section id="trabajos" class="pt-5">
       <div class="container mt-5 pb-5 bg-primary">
-        <div class="text-center p-4">
+        <div class="text-center p-4 text-Permanent">
           <h2>Mis últimos trabajos</h2>
         </div>
         <div class="card-deck my-3">
           <div class="card">
             <img src="assets/img/meet_coffee.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Proyecto Meet & Coffee</h5>
               <p class="card-text"></p>
             </div>
           </div>
           <div class="card">
             <img src="assets/img/iguana_page.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Proyecto Iguana</h5>
               <p class="card-text"></p>
             </div>
           </div>
           <div class="card">
             <img src="assets/img/suricata.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Proyecto Suricata</h5>
               <p class="card-text"></p>
             </div>
           </div>
@@ -144,21 +148,21 @@
           <div class="card">
             <img src="assets/img/cuppon.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Proyecto Cuppon</h5>
               <p class="card-text"></p>
             </div>
           </div>
           <div class="card">
             <img src="assets/img/ricomida.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Proyecto Ricomida</h5>
               <p class="card-text"></p>
             </div>
           </div>
           <div class="card">
             <img src="assets/img/dmark.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Proyecto Dmark</h5>
               <p class="card-text"></p>
             </div>
           </div>
@@ -170,7 +174,7 @@
     <section id="contact">
       <div class="container">
         <div class="mt-5 text-center">
-          <h2>Contacto</h2>
+          <h1 class="text-Permanent">Contacto</h1>
           <p>¿Quieres conocer más de mí?</p>
         </div>
         <div class="text-center">
