--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#sobre-mi">Sobre mí</a>
+              <a class="nav-link" href="#sobremi">Sobre mí</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#mi-experiencia">Experiencia</a>
+              <a class="nav-link" href="#experiencia">Experiencia</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#mis-trabajos">Trabajos</a>
+              <a class="nav-link" href="#trabajos">Trabajos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contacto">Contacto</a>
+              <a class="nav-link" href="#contact">Contacto</a>
             </li>
           </ul>
         </div>
@@ -55,26 +55,26 @@
       </div>
     </header>
 
-    <section id="sobre-mi">
-      <div class="container">
-        <div class="mt-5">
-         <h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h5>
+    <section id="sobremi" class="text-Permanent text-center mt-5 pt-5">
+      <div class="container ">
+        <div class="mt-5 text-Permanent text-center">
+         <h3>Sobre mi</h3>
         </div>
         <div class="row">
           <div class="col-md-6">
-            <p class="my-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p class="my-3">Mi nombre es Fabián Tapia, tengo 25 años, apasionado por el deporte: practico natación y futbol, y la teconogía en general.</p>
           </div>
           <div class="col-md-6">
-            <p class="my-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p class="my-3">Ingeniero Comercial titulado UDP, perfil enfocado a la logística, de análisis estadístico, y programas tecnológicos en general</p>
           </div>
         </div>
       </div>
 
     </section>
 
-    <section id="mi-experiencia">
-      <div class="container text-center mt-5">
-        <div class="">
+    <section id="experiencia" class="pt-5">
+      <div class="container text-center mt-5 ">
+        <div class="text-Permanent">
           <h2>MI EXPERIENCIA</h2>
         </div>
         <div id="carouselricomida" class="carousel slide" data-ride="carousel">
@@ -85,25 +85,29 @@
           <div class="carousel-inner">
               <div class="carousel-item active">
                   <div class="row">
-                    <div class="col-6">
-                      <img class="d-block w-100 img-carousel" src="assets/img/udp.png" alt="First slide">
+                    <div class="col-6 ">
+                      <img class="d-block m-auto img-carousel" src="assets/img/udp.png" alt="First slide">
                       <h5>Ayudante Universidad Diego Portales</h5>
+                      <p>Cursos: Principios de Microeconomía, Teoría de Juegos, Organizacion y Empresa, Taller de Análisis de empresa</p>
                     </div>
                     <div class="col-6">
-                      <img class="d-block w-100 img-carousel" src="assets/img/enel.jpeg" alt="First slide">
+                      <img class="d-block m-auto py-5" src="assets/img/enel.jpeg" alt="First slide">
                       <h5>Práctica Enel</h5>
+                      <p>Encargado factura y reparto masivo</p>
                     </div>
                   </div>
               </div>
               <div class="carousel-item">
                   <div class="row">
-                    <div class="col-6">
-                      <img class="d-block w-100 img-carousel" src="assets/img/parquearauco.png" alt="second slide">
+                    <div class="col-6 text-center">
+                      <img class="d-block m-auto img-carousel" src="assets/img/parquearauco.png" alt="second slide">
                       <h5>Práctica Parque Arauco</h5>
+                      <p>Analista Tesorería Regional</p>
                     </div>
-                    <div class="col-6">
-                      <img class="d-block w-100 img-carousel" src="assets/img/moovmedia.png" alt="second slide">
+                    <div class="col-6 text-center">
+                      <img class="d-block m-auto img-carousel" src="assets/img/moovmedia.png" alt="second slide">
                       <h5>Moovmedia, Marketing Digital</h5>
+                      <p>Encargado de contenido web de las empresas como Arauco, Fundacion Arauco, Santillana, etc.</p>
                     </div>
                   </div>
               </div>
@@ -112,30 +116,30 @@
         </div>
     </section>
 
-    <section id="mis-trabajos">
+    <section id="trabajos" class="pt-5">
       <div class="container mt-5 pb-5 bg-primary">
-        <div class="text-center p-4">
+        <div class="text-center p-4 text-Permanent">
           <h2>Mis últimos trabajos</h2>
         </div>
         <div class="card-deck my-3">
           <div class="card">
             <img src="assets/img/meet_coffee.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Proyecto Meet & Coffee</h5>
               <p class="card-text"></p>
             </div>
           </div>
           <div class="card">
             <img src="assets/img/iguana_page.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Proyecto Iguana </h5>
               <p class="card-text"></p>
             </div>
           </div>
           <div class="card">
             <img src="assets/img/suricata.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Proyecto Suricata</h5>
               <p class="card-text"></p>
             </div>
           </div>
@@ -144,21 +148,21 @@
           <div class="card">
             <img src="assets/img/cuppon.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Proyecto Cuppon</h5>
               <p class="card-text"></p>
             </div>
           </div>
           <div class="card">
             <img src="assets/img/ricomida.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Proyecto Ricomida</h5>
               <p class="card-text"></p>
             </div>
           </div>
           <div class="card">
             <img src="assets/img/dmark.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Proyecto Dmark</h5>
               <p class="card-text"></p>
             </div>
           </div>
@@ -167,10 +171,10 @@
     </section>
 
 
-    <section id="contacto">
+    <section id="contact">
       <div class="container">
         <div class="mt-5 text-center">
-          <h2>Contacto</h2>
+          <h1 class="text-Permanent">Contacto</h1>
           <p>¿Quieres conocer más de mí?</p>
         </div>
         <div class="text-center">
@@ -190,17 +194,17 @@
               <h3 class="firma-n">Fabián</h3>
             </div>
             <div class="col-6 text-center">
-              <a href="https://github.com/"><i class="fab fa-2x fa-github-square"></i></a>
-              <a href="https://www.linkedin.com/"><i class="fab fa-2x fa-linkedin"></i></a>
-              <a href="https://twitter.com/"><i class="fab fa-2x fa-twitter-square"></i></a>
-              <a href="https://www.facebook.com/"><i class="fab fa-2x fa-facebook"></i></a>
+              <a href="https://github.com/"><i class="color-icono fab fa-2x fa-github-square"></i></a>
+              <a href="https://www.linkedin.com/"><i class="color-icono fab fa-2x fa-linkedin"></i></a>
+              <a href="https://twitter.com/"><i class="color-icono fab fa-2x fa-twitter-square"></i></a>
+              <a href="https://www.facebook.com/"><i class="color-icono fab fa-2x fa-facebook"></i></a>
             </div>
         </div>
       </div>
 
     </footer>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
