--- a/index.html
+++ b/index.html
@@ -56,15 +56,13 @@
     </header>
 
     <section id="sobremi" class="text-Permanent text-center mt-5 pt-5">
-<<<<<<< HEAD
-      <div class="container ">
-=======
-      <div class="container border-medium">
->>>>>>> master
+
+      <div class="container d-none d-sm-block">
+
         <div class="mt-5 text-Permanent text-center">
          <h3>Sobre mi</h3>
         </div>
-        <div class="row">
+        <div class="row ">
           <div class="col-md-6">
             <p class="my-3">Mi nombre es Fabián Tapia, tengo 25 años, apasionado por el deporte: practico natación y futbol, y la teconogía en general.</p>
           </div>
@@ -136,11 +134,9 @@
           <div class="card">
             <img src="assets/img/iguana_page.png" class="card-img-top" alt="...">
             <div class="card-body">
-<<<<<<< HEAD
-              <h5 class="card-title">Proyecto Iguana </h5>
-=======
+
               <h5 class="card-title">Proyecto Iguana</h5>
->>>>>>> master
+
               <p class="card-text"></p>
             </div>
           </div>
@@ -202,10 +198,13 @@
               <h3 class="firma-n">Fabián</h3>
             </div>
             <div class="col-6 text-center">
-              <a href="https://github.com/"><i class="color-icono fab fa-2x fa-github-square"></i></a>
-              <a href="https://www.linkedin.com/"><i class="color-icono fab fa-2x fa-linkedin"></i></a>
-              <a href="https://twitter.com/"><i class="color-icono fab fa-2x fa-twitter-square"></i></a>
-              <a href="https://www.facebook.com/"><i class="color-icono fab fa-2x fa-facebook"></i></a>
+              <a href="https://github.com/" data-toggle="tooltip" data-placement="top" title="github"><i class="color-icono fab fa-2x fa-github-square"></i></a>
+              <a href="https://www.linkedin.com/" data-toggle="tooltip" data-placement="top" title="linkedin"><i class="color-icono fab fa-2x fa-linkedin"></i></a>
+              <a href="https://twitter.com/" data-toggle="tooltip" data-placement="top" title="twitter"><i class="color-icono fab fa-2x fa-twitter-square"></i></a>
+              <a href="https://www.facebook.com/" data-toggle="tooltip" data-placement="top" title="FACEBOOK"><i class="color-icono fab fa-2x fa-facebook"></i></a>
+
+
+
             </div>
         </div>
       </div>
