--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="es" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>Fabián Tapia Bascur | Mi Portafolio</title>
@@ -20,7 +20,7 @@
   </head>
   <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-info fixed-top">
       <div class="container">
         <a class="navbar-brand firma-n" href="#">F T B</a>
 
@@ -34,10 +34,13 @@
               <a class="nav-link" href="#sobremi">Sobre mí</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="#trabajos">Trabajos</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="#experiencia">Experiencia</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#trabajos">Trabajos</a>
+              <a class="nav-link" href="#conocimientos">Conocimientos</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#contact">Contacto</a>
@@ -49,22 +52,23 @@
 
 
     <header>
-      <div class="hero text-dark text-center ml-4 pt-5">
-        <h2 class="display-5 text-bottom">Yo soy </h2>
-        <h2 class="display-5 font-weight-bold  text-bottom firma-n">Fabián</h2>
+      <div class="hero text-white text-bottom">
+        <h2 class="display-5 font-weight-bold text-left text-top ml-3 firma-n">Fabián Tapia</h2>
+        <h2 class="display-5 font-weight-bold ml-3 text-left firma-n">Desarrollador Web</h2>
+        <h2 class="display-5 font-weight-bold ml-3 text-left firma-n">Ingeniero Comercial</h2>
       </div>
     </header>
 
     <section id="sobremi" class="text-Permanent text-center mt-5 pt-5">
 
-      <div class="container d-none d-sm-block">
+      <div class="container">
 
         <div class="mt-5 text-Permanent text-center">
-         <h3>Sobre mi</h3>
+         <h2>Sobre mi</h3>
         </div>
         <div class="row ">
           <div class="col-md-6">
-            <p class="my-3">Mi nombre es Fabián Tapia, tengo 25 años, apasionado por el deporte: practico natación y futbol, y la teconogía en general.</p>
+            <p class="my-3">Mi nombre es Fabián Tapia, tengo 25 años, apasionado por la tecnología y el deporte: practico natación y futbol..</p>
           </div>
           <div class="col-md-6">
             <p class="my-3">Ingeniero Comercial titulado UDP, perfil enfocado a la logística, de análisis estadístico, y programas tecnológicos en general</p>
@@ -74,53 +78,9 @@
 
     </section>
 
-    <section id="experiencia" class="pt-5">
-      <div class="container text-center mt-5 ">
-        <div class="text-Permanent">
-          <h2>MI EXPERIENCIA</h2>
-        </div>
-        <div id="carouselricomida" class="carousel slide" data-ride="carousel">
-          <ol class="carousel-indicators ">
-            <li data-target="#carouselricomida" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselricomida" data-slide-to="1"></li>
-          </ol>
-          <div class="carousel-inner">
-              <div class="carousel-item active">
-                  <div class="row">
-                    <div class="col-6 ">
-                      <img class="d-block m-auto img-carousel" src="assets/img/udp.png" alt="First slide">
-                      <h5>Ayudante Universidad Diego Portales</h5>
-                      <p>Cursos: Principios de Microeconomía, Teoría de Juegos, Organizacion y Empresa, Taller de Análisis de empresa</p>
-                    </div>
-                    <div class="col-6">
-                      <img class="d-block m-auto py-5" src="assets/img/enel.jpeg" alt="First slide">
-                      <h5>Práctica Enel</h5>
-                      <p>Encargado factura y reparto masivo</p>
-                    </div>
-                  </div>
-              </div>
-              <div class="carousel-item">
-                  <div class="row">
-                    <div class="col-6 text-center">
-                      <img class="d-block m-auto img-carousel" src="assets/img/parquearauco.png" alt="second slide">
-                      <h5>Práctica Parque Arauco</h5>
-                      <p>Analista Tesorería Regional</p>
-                    </div>
-                    <div class="col-6 text-center">
-                      <img class="d-block m-auto img-carousel" src="assets/img/moovmedia.png" alt="second slide">
-                      <h5>Moovmedia, Marketing Digital</h5>
-                      <p>Encargado de contenido web de las empresas como Arauco, Fundacion Arauco, Santillana, etc.</p>
-                    </div>
-                  </div>
-              </div>
-            </div>
-          </div>
-        </div>
-    </section>
-
     <section id="trabajos" class="pt-5">
-      <div class="container mt-5 pb-5 bg-primary">
-        <div class="text-center p-4 text-Permanent">
+      <div class="container mt-5 pb-5 bg-info">
+        <div class="text-white text-center p-4 text-Permanent">
           <h2>Mis últimos trabajos</h2>
         </div>
         <div class="card-deck my-3">
@@ -174,6 +134,102 @@
       </div>
     </section>
 
+    <section id="experiencia" class="pt-5">
+      <div class="container text-center mt-5 ">
+        <div class="text-Permanent">
+          <h2>MI EXPERIENCIA</h2>
+        </div>
+        <div id="carouselricomida" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselricomida" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselricomida" data-slide-to="1"></li>
+          </ol>
+          <div class="carousel-inner">
+              <div class="carousel-item active">
+                <div class="row">
+                  <div class="col-6 ">
+                    <img class="d-block m-auto img-carousel" src="assets/img/udp.png" alt="First slide">
+                    <h5 class="text-Permanent">Ejecutivo Comercial MV Servicios</h5>
+                    <p>Análisis proyección de cobranzas a morosos, análisis recuperación por camadas de distribución de carteras, análisis eficiencia relativa, administración de estrategia recupero, entre otros.</p>
+                  </div>
+                  <div class="col-6">
+                    <img class="d-block m-auto py-4 img-caruosel" src="assets/img/moovmedia.png" alt="First slide">
+                    <h5 class="text-Permanent">Moovmedia, Marketing Digital</h5>
+                    <p>Encargado de contenido web de las empresas como Arauco, Fundacion Arauco, Santillana, etc.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                  <div class="row">
+                    <div class="col-6 ">
+                      <img class="d-block m-auto img-carousel" src="assets/img/parquearauco.png" alt="Second slide">
+                      <h5 class="text-Permanent">Práctica Parque Arauco</h5>
+                      <p>Analista Tesorería Regional</p>
+                    </div>
+                    <div class="col-6">
+                      <img class="d-block m-auto py-5 img-carousel" src="assets/img/enel.jpeg" alt="Second slide">
+                      <h5 class="text-Permanent">Práctica Enel</h5>
+                      <p>Encargado factura y reparto masivo</p>
+                    </div>
+                  </div>
+              </div>
+            </div>
+          </div>
+          <div class="mt-5 pt-4 bg-info text-white">
+            <h3 class="text-Permanent">Otras experiencias</h3>
+            <ul class="py-3">
+              <li class="pb-3">Ayudante Organización y Empresa, Taller de Análisis de empresas (UDP), Marzo - Junio (2018)
+                <br>Clases, elaboración pruebas, y pautas de pruebas.
+              </li>
+              <li class="pb-3">Ayudante teoría de juegos (UDP), Agosto - Diciembre (2017)
+                <br>Clases, elaboración de pruebas.
+              </li>
+              <li class="pb-3">Ayudante teoría de juegos y principios de microeconomía (UDP), Marzo – Julio (2015)
+                <br>Clases, elaboración pautas solemne y exámenes en Latex.
+              </li>
+              <li class="pb-3">Experiencia en trabajos con bases de datos
+                <br>Realización de paper “La cifra Negra” (Usando Stata)
+                <br>Otros trabajos menores con bases de datos (Stata y Excel)
+              </li>
+            </ul>
+          </div>
+        </div>
+    </section>
+
+    <section id=conocimientos class=" py-5">
+      <div class="text-center text-Permanent">
+          <h2>Otros conocimientos</h2>
+      </div>
+      <div class="text-center mt-5">
+        <p>Dominio nivel avanzado Stata.</p>
+
+        <p>Dominio nivel avanzado MS Office.</p>
+
+        <a href="https://desafiosdev.s3.amazonaws.com/uploads/certification/image/3470/aprobacion-fundamentos-de-data-science-g3-4051.png" target="_blank">Dominio nivel medio Python, Estudio realizado en Desafío Latam (Certificado)</a>
+        <p></p>
+        <a href="https://desafiosdev.s3.amazonaws.com/uploads/certification/image/3470/aprobacion-fundamentos-de-data-science-g3-4051.png" target="_blank">Fundamentos Desarrollo Web, Estudio realizado en Desafío Latam (Certificado)</a>
+        <p></p>
+
+        <p>Dominio nivel medio Wordpress.</p>
+
+        <p>Dominio nivel usuario SQL.</p>
+
+        <p>Dominio nivel usuario SAP.</p>
+
+        <p>Dominio nivel usuario Rstudio.</p>
+
+        <p>Dominio nivel usuario Latex.</p>
+
+        <p>Inscrito en curso de Full Stack Academia Latam. (clases nocturnas de arzo a octubre)</p>
+      </div>
+
+
+
+
+    </section>
+
+
+
 
     <section id="contact">
       <div class="container">
@@ -191,18 +247,16 @@
 
 
 
-    <footer class="bg-primary">
+    <footer class="bg-info">
       <div class="mt-5 p-4 text-footer">
         <div class="row">
             <div class="col-6 text-center ">
-              <h3 class="firma-n">Fabián</h3>
+              <h3 class="firma-n text-white">Fabián</h3>
             </div>
             <div class="col-6 text-center">
-              <a href="https://github.com/" data-toggle="tooltip" data-placement="top" title="github"><i class="color-icono fab fa-2x fa-github-square"></i></a>
-              <a href="https://www.linkedin.com/" data-toggle="tooltip" data-placement="top" title="linkedin"><i class="color-icono fab fa-2x fa-linkedin"></i></a>
-              <a href="https://twitter.com/" data-toggle="tooltip" data-placement="top" title="twitter"><i class="color-icono fab fa-2x fa-twitter-square"></i></a>
-              <a href="https://www.facebook.com/" data-toggle="tooltip" data-placement="top" title="FACEBOOK"><i class="color-icono fab fa-2x fa-facebook"></i></a>
-
+              <a href="https://www.linkedin.com/in/fabi%C3%A1n-andr%C3%A9s-tapia-bascur-847724bb/" data-toggle="tooltip" data-placement="top" title="linkedin"><i class="color-icono fab fa-2x fa-linkedin"></i></a>
+              <a href="mailto:fabian.tapia.bascur@gmail.com" data-toggle="tooltip" data-placement="top" title="Mail"><i class="color-icono fab fa-2x fas fa-envelope-square"></i></a>
+              <a href="tel:+56962320407" data-toggle="tooltip" data-placement="top" title="Celular"><i class="color-icono fab fa-2x fas fa-phone"></i></a>
 
 
             </div>
