--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
       </div>
     </header>
 
-    <section id="sobremi" class="text-Permanent text-center mt-5 pt-5">
+    <section id="sobremi" class="text-Permanent text-center mt-5">
 
       <div class="container">
 
-        <div class="mt-5 text-Permanent text-center">
+        <div class="text-Permanent text-center">
          <h2>Sobre mi</h3>
         </div>
         <div class="row ">
